fix:change alignment and font-family

--- a/style.css
+++ b/style.css
@@ -18,7 +18,7 @@ h1 {
 
 #form-container {
     width: 100%;
-    height: 20vh;
+    height: 21vh;
     display: flex;
     justify-content: center;
     background-color: #ffc300;
@@ -36,7 +36,7 @@ h1 {
 ::placeholder {
     font-size: 1.1em;
     color: #006494;
-    font-family: "Merienda", cursive;
+    font-family: cursive;
     font-optical-sizing: auto;
     font-weight: normal;
     font-style: normal;
@@ -53,10 +53,10 @@ h1 {
     border-radius: 0.5em;
     color: #ffffff;
     background-color: #3b28cc;
-    border: 1px solid #ffffff;
-    font-family: "Merienda", cursive;
+    border: 2px solid #ffffff;
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     font-optical-sizing: auto;
-    font-weight: bold;
+    font-weight: normal;
     font-style: normal;
     transition: 0.5s;
 }
@@ -77,6 +77,8 @@ h1 {
 }
 
 #container div {
+    width: 213px;
+    height: 365px;
     border: 2px solid #ffd60a;
     border-radius: 5px;
     text-align: left;
